# plutus-nft

./: .gitignore  BLOG.md  README.md  plutus-nft.cabal
app/: Main.hs
scripts/: mainnet-protocol-parameters.json  mainnet-query-protocol-parameters.sh  mint_nft.sh  nft-mint-policy.plutus  nft-tx-body.01  nft-tx.01  policyid.sh
src/Cardano/Plutus/: Nft.hs
